# gainlineup

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md  update_plots.sh
.github/workflows/: ci.yml
examples/: Cargo.toml  check_absolute_path.rs  montecarlo_gain_target.rs  plot_gain_margin.py
examples/montecarlo-gain-target/: Cargo.toml  plot_gain_margin.py  pyproject.toml
examples/montecarlo-gain-target/src/: main.rs
examples/src/: main.rs
files/: defaults_to_cw.toml  defaults_to_cw.toml.html  simple_config.html  simple_config.toml  simple_config.toml.html  simple_wideband_config.html  simple_wideband_config.toml  simple_wideband_config.toml.html  wideband.toml  wideband.toml.html
files/compression/: compression_test.html  compression_test.toml  compression_test.toml.html
files/include_directive/: config.html  config.toml.html  include.toml  include.toml.html  sub_config.toml
files/touchstone_invalid_frequency/: config.toml
files/touchstone_options/: config.html  config.toml  config.toml.html
src/: amplifier_model.rs  block.rs  cascade.rs  cli.rs  constants.rs  file.rs  file_operations.rs  input.rs  lib.rs  main.rs  node.rs  open.rs  plot.rs
src/conversions/: mod.rs
tests/: cross_crate_cascade_validation.rs  integration_rf_scenarios.rs  readme_01_input_signal.rs  readme_02_blocks.rs  readme_03_cascade.rs  readme_04_compression.rs  readme_05_dynamic_range.rs  readme_06_am_am_single_block.rs  readme_07_am_am_cascade.rs  readme_08_imd3.rs  readme_09_node_dynamic_range.rs  readme_10_amplifier_model.rs  readme_examples.rs  simple_config.toml
tests/compression/: compression_test.toml
tests/include_directive/: config.toml  ntwk3.md  ntwk3.s2p.html  sub_config.toml
tests/touchstone_options/: config.toml
