[package]
authors = ["Ian Cleary <iancleary@hey.com>"]
description = "A Gain Lineup toolbox for RF Modeling"
documentation = "https://docs.rs/gainlineup"
edition = "2021"
homepage = "https://github.com/iancleary/gainlineup"
license = "MIT"
name = "gainlineup"
repository = "https://github.com/iancleary/gainlineup"
version = "0.20.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rfconversions = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"
touchstone = "0.11.2"

[features]
default = ["cli", "plot"]
cli = []
debug-print = []
plot = []
