[package]
authors = ["Ian Cleary <iancleary@hey.com>"]
description = "A Gain Lineup toolbox for RF Modeling"
documentation = "https://docs.rs/gainlineup"
edition = "2021"
homepage = "https://github.com/iancleary/gainlineup"
license = "MIT"
name = "gainlineup"
repository = "https://github.com/iancleary/gainlineup"
version = "0.21.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rfconversions = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"
touchstone = "0.11.4"

[features]
default = ["cli", "plot"]
cli = []
debug-print = []
plot = []
