[package]
authors = ["Ian Cleary <iancleary@hey.com>"]
description = "A Gain Lineup toolbox for RF Modeling"
documentation = "https://docs.rs/gainlineup"
edition = "2021"
homepage = "https://github.com/iancleary/gainlineup"
license = "MIT"
name = "gainlineup"
repository = "https://github.com/iancleary/gainlineup"
version = "0.22.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rfconversions = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"
touchstone = "0.12.0"
tracing = { version = "0.1.44", default-features = false }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"], optional = true }

[features]
default = ["cli", "plot"]
cli = ["dep:tracing-subscriber"]
plot = []
